--- a/src/main/resources/templates/views/listarEmpleados.html
+++ b/src/main/resources/templates/views/listarEmpleados.html
@@ -32,7 +32,7 @@
                 <td>
                     <a th:href="@{/frmActualizar/}+${empleado.id}"> Actualizar</a>
                     <a th:href="@{/borrar/}+${empleado.id}"> Borrar</a>
-                    <a th:href="@{/detallesEstudiante/}+${empleado.id}"> Detalles</a>
+                    <a th:href="@{/detallesEmpleado/}+${empleado.id}"> Detalles</a>
                 </td>
             </tr>
 
